# QUALIDIAGIQ

./: .cursorrules  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  ANALISE_04052026_echo  CHANGELOG_MVP.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yml  docker-compose.yml  init.sql  inventario_qdi.py  pyproject.toml
.claude/: CLAUDE.md  PROMPT_DIA_1.md  settings.json
.cursor/rules/: commits-pt-br.mdc  communication-style.mdc  fastapi-presentation.mdc  port-adapter-pattern.mdc  python-clean-architecture.mdc  qdi-cnpj-opcional.mdc  qdi-commit-policy.mdc  qdi-domain-context.mdc  qdi-gravacao-diagnostico-email.mdc  qdi-lexico-plataforma.mdc  qdi-storage-policy.mdc  security-hardening.mdc  testing-discipline.mdc
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  RUNBOOK_DATABASE.md  dependabot.yml
.github/adr/: ADR-003-llm-desenvolvimento-vs-producao.md  ADR-004-session-httponly-roadmap.md  ADR-005-normativa-score-macro-postgres.md  ADR-006-dependencias-ia-fora-src.md  ADR-007-langgraph-langchain-ollama-stack.md  ADR-008-bcrypt-rounds-auth.md  ADR-009-jwt-secretstr-producao.md  ADR-010-argon2id-hash-senha.md  ADR-010-wizard-form-estado-sem-xstate.md  ADR-011-pwa-next14-qualidiagiq.md  ADR-012-lgpd-worm-direitos-titular.md  ADR-013-cnpj-contextos-lead-vs-painel.md  ADR-015-w3c-trace-context-proxy-cors.md  ADR-016-supply-chain-npm-audit-gitleaks.md  ADR-017-frontend-sem-anthropic-sdk.md  ADR-018-csp-nonce-next-spike.md  ADR-019-sql-migrations-forward-only.md  ADR-020-go-live-jwt-localstorage-risco-residual.md  ADR-021-llm-router-multi-tier.md
.github/workflows/: ci.yml  zap-baseline-dispatch.yml
.ollama/: Modelfile  Modelfile.qwen  README.md
.ollama/context/: architecture.md  coding_rules.md  qdi_context.md
.ollama/scripts/: ask_qdi.sh
INICIAR_APP/: README.md  iniciar-app.sh  iniciar.sh  parar-app.sh
INICIAR_APP/lib/: qdi-env.sh
PLANO_ACAO_CODEX/: 00_INDICE.md  01_AVALIACAO_EXECUTIVA.md  02_MODELO_ATUAL_PLANO_IMPLANTACAO.md  03_ACOES_POR_DIMENSAO_E_PERGUNTA.md  04_ACOES_POR_SEGMENTO.md  05_MELHORIAS_RECOMENDADAS.md
_DEVELOPER/: 03_roadmap_sprint_1.md  ANALISE_ANTIGRAVITY.md  ANALISE_PROJETO.md  AVALIACAO_PROMPT_DESENVOLVIMENTO.md  FEATURES_HANDOFF_P1_P8.md  FLUXO_DIAGNOSTICO_E_SCORE.md  HANDOFF_EPICOS_GRANDES_QDI_COMPLETO.md  HANDOFF_IMPLEMENTACAO_10H_2026-05-01.md  HANDOFF_PLANO_EXECUCAO_2026-05-03.md  HANDOFF_PLANO_MVP_FECHADO.md  HANDOFF_PROXIMA_SESSAO_QDI.md  HANDOFF_SESSAO_AUTONOMA_2026-05-01.md  HANDOFF_SESSAO_CONTINUACAO_2026-05-01.md  INDICE_PLANOS_HANDOFF.md  PLANO_DE_EXECUCAO_COMPLETO.md  PLANO_EXECUCAO_HANDOFF_02052026.md  PROMPT_INICIO_DESENVOLVIMENTO.md  README.md  RUNBOOK_SMOKE_SUPABASE_OPS.md  RUNBOOK_SUPABASE_RLS.md  proposta_estrutura_sandbox_dev.md
_DEVELOPER/ANALISE_30042026/: 00_SUMARIO_EXECUTIVO.md  01_ANALISE_DETALHADA.md  02_REGISTRO_ISSUES.md  03_PLANO_ACAO_S05_HARDENING.md  04_CHECKLIST_PRINCIPIOS_NAO_NEGOCIAVEIS.md  05_COMPARATIVO_MANUS_vs_CLAUDE.md  README.md
_DEVELOPER/IA_DIAG_V2/: 00_RESUMO_EXECUTIVO.md  ADR-IA-001-estrategia-hibrida-memoria-rag-local.md  DECISOES_PENDENTES_ALLAN.md  ENSINO_SUPERVISIONADO_QDI.md  FASE_A_CHECKLIST_OLLAMA.md  FASE_B_BENCHMARK_MODELOS.md  FONTES_E_RAG_POLITICA.md  PROMPT_CURSOR_DESENVOLVIMENTO.md  README.md  RELATORIO_CONSOLIDACAO_FONTES.md  ROADMAP_IA_LOCAL_QDI_V1.md
_DEVELOPER/MVP_05052026/: 00_CENARIO_DEMO_LOCAL_SUPERVISIONADA.md  01_AVALIACAO_GAP_MVP_100.md  02_CRITERIOS_ACEITE_EVIDENCIAS.md  03_CRONOGRAMA_03A05_MAI_2026.md  04_RISCOS_DEPENDENCIAS_DECISOES.md  05_PROMPT_AGENTE_FECHO_MVP.md  07_ROTEIRO_DEMO.md  HANDOFF_PLANO_EXECUCAO_MVP_05052026.md  README.md
_DEVELOPER/ORIENTACAO_CURSOR/: 00_LEIA_PRIMEIRO.md  01_CURSORRULES_ATUALIZADO.md  02_RULES_MDC_POR_CAMADA.md  03_GUIA_DESENVOLVIMENTO.md  04_PLANO_EXECUCAO.md  05_PROMPTS_OPERACIONAIS.md
_DEVELOPER/_ANTIGRAVITY/: 01_ESTADO_ATUAL_MVP.md  02_AVALIACAO_ARQUITETURA.md  03_AVALIACAO_QUALIDADE_TESTES.md  04_ROADMAP_PROXIMOS_PASSOS.md
_DEVELOPER/_CONCLUIDOS_DEV/: HANDOFF_CICLO_Q_2026-05-02.md  HANDOFF_PLANO_EXECUCAO_2026-05-03.md
_DEVELOPER/_ESTRATEGIA_QUALIDIAGIQ/: 01_ESTRATEGIA_GERAL.md  02_DIAGNOSTICO_GRATUITO.md  03_EVOLUCAO_PAGA.md  04_METODOLOGIA_PASSO_A_PASSO.md  05_PERGUNTAS_E_DIMENSOES.md  06_FUNIL_E_CONVERSAO.md  07_ANALISE_PROTOTIPO_OBSERVADO.md  08_QUESTIONARIO_QDI_FREE_v1.md
_IA_AVANCADO_DIAG/: 01_conceitos.md  02_arquitetura_da_memoria.md  03_comandos_ollama.md  04_diagnostico_do_teste.md  05_proximo_passo_rag_local.md  06_checklist_operacional.md  08_templates_de_memoria.md  10_checklist_qualidade_memoria.md  11_roteiro_de_estudo_45min.md  12_como_transformar_fontes_em_contexto.md  13_catalogo_de_fontes_qdi.md  16_caderno_treino_supervisionado.md  README.md
docs/: 00_INDICE.md  01_arquitetura.md  02_dominio_qdi.md  CHANGELOG_MVP.md  HANDOFF_PLANO_MVP_FECHADO.md  HANDOFF_PROXIMA_SESSAO_QDI.md  README.md  operacao_rls_idempotency.md
dominio_fiscal/: .gitignore  INDEX.md  catalogo_fontes.yml
frontend/: .env.example  .env.local.example  .env.production.example  .gitignore  README.md  lighthouserc.json  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
loadtest/: k6_diagnostico_smoke.js
scripts/: audit_secrets.sh  auditoria_catalogo_perguntas_mvp.py  auditoria_pilar_abnt_catalogo.py  auditoria_questionario_vs_catalogo.py  backfill_materializacao_empresa.py  export_manifesto_pesos_md.py  export_openapi_json.py  extrair_fontes_catalogo_rag.py  generate_questionario_catalog.py  go_live_45min.sh  go_live_tecnico.sh  ia_diag_v2_fase_b_benchmark.py  ia_diag_v2_fase_d_rag_piloto.py  ia_diag_v2_gerar_relatorio_fase_b.py  ingestao_rag_baseline.py  ingestao_rag_catalogo.py  ingestao_rag_indice_codigo.py  materializar_planos_painel_legado.py  regenerar_pdf_diagnostico_dev.py  remover_empresa_dev.py  report_rls_public.py  smoke_explicacao_score_llm_live.sh  smoke_explicacao_score_llm_prepare.sh  verify_mvp_schema.py
tests/: conftest.py
(+949 files in other folders)
