[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qualidiag-iq"
version = "0.1.0"
description = "QualiDiagIQ — Diagnóstico Tributário Automatizado para a Reforma Tributária do Consumo (módulo Tributiq)"
authors = [
    { name = "Allan Marcio", email = "allanmcz@gmail.com" }
]
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # DB
    "supabase>=2.7.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.30",
    # IA / LLM
    "anthropic>=0.34.0",
    "openai>=1.45.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langgraph>=0.2.0",
    # PDF
    "weasyprint>=62.0",
    "jinja2>=3.1.4",
    # Observabilidade
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "structlog>=24.4.0",
    # Utils
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "ipython>=8.27.0",
    "httpx>=0.27.0",
]

# === Tooling ===

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF"]
ignore = ["E501"]  # linha longa: black cuida

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-vv --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/migrations/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
