[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qualidiag-iq"
version = "0.1.0"
description = "QualiDiagIQ — Diagnóstico Tributário Automatizado para a Reforma Tributária do Consumo (módulo Tributiq)"
authors = [
    { name = "Allan Marcio", email = "allanmcz@gmail.com" }
]
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "pydantic>=2.7.0",
    "email-validator>=2.0.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # DB
    "supabase>=2.7.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.30",
    # IA / LLM
    "anthropic>=0.34.0",
    "openai>=1.45.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langgraph>=0.2.0",
    # PDF
    "weasyprint>=62.0",
    "jinja2>=3.1.4",
    # Observabilidade
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "structlog>=24.4.0",
    # Utils
    "httpx>=0.27.0",
    "cachetools>=5.5.0",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.4 não é compatível com bcrypt 5.x (__about__ removido) — verify() pode lançar e derrubar POST /auth/login.
    "bcrypt>=4.0.1,<5",
    "PyJWT>=2.8.0",
    "sentry-sdk[fastapi]>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.23.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "types-cachetools>=5.5.0",
    "ipython>=8.27.0",
    "httpx>=0.27.0",
    "hypothesis>=6.115.0",
]

# === Tooling ===

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF"]
ignore = [
    "E501",  # linha longa: black cuida
    "TC001",  # ports/adapters QDI: imports explícitos de ABC (BaseNormativaPort) preferidos a TYPE_CHECKING-only
]

[tool.ruff.lint.per-file-ignores]
"tests/unit/presentation/test_diagnostico_rascunho_endpoints.py" = ["SIM117"]
# UUID/date em contratos públicos de comandos; TCH exigiria imports duplicados sem ganho real.
"src/application/use_cases/plano_painel_subtarefa.py" = ["TC003"]
"src/domain/repositories/diagnostico_repository.py" = ["TC003"]
# Tipagem psycopg2 + alias ``PgConnection`` legível para assinaturas síncronas.
"src/infrastructure/repositories/postgres_plano_painel_sync.py" = ["TC002", "TC003", "N812"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-vv --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "postgres: integração com PostgreSQL (QDI_POSTGRES_TEST_URL ou postgres@127.0.0.1:60322)",
    "mvp_gate: evidências automatizadas checklist MVP fechado (smoke API + Postgres schema/RLS)",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/migrations/*",
    "*/__init__.py",
    "*/scripts/*",
    # Adapter só para Playwright/CI integrado — coberto por e2e, não por pirâmide unitária.
    "*/ci_playwright_diagnostico_repository.py",
]

[tool.coverage.report]
fail_under = 79
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]
